--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3.8"
+    "python.pythonPath": "C:\\Users\\akshay\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
